separates tests for deprecated attach/detach functions

--- a/tests/integration/functional/hive_fork_manager/CMakeLists.txt
+++ b/tests/integration/functional/hive_fork_manager/CMakeLists.txt
@@ -306,6 +306,41 @@ ENDMACRO()
  ADD_SQL_FUNCTIONAL_TEST( shared_lib/get_vesting_balance/get_vesting_balance.sql )
  ADD_SQL_FUNCTIONAL_TEST( sanity_check/test_tables_and_sequences_properly_flagged_for_dump.sql )
 
-
+ ADD_SQL_FUNCTIONAL_TEST(deprecated/attach_detach_with_function/app_context_attach.sql)
+ ADD_SQL_FUNCTIONAL_TEST(deprecated/attach_detach_with_function/app_context_attach_negative.sql)
+ ADD_SQL_FUNCTIONAL_TEST(deprecated/attach_detach_with_function/app_context_detach.sql)
+ ADD_SQL_FUNCTIONAL_TEST(deprecated/attach_detach_with_function/app_context_detach_after_next_block.sql)
+ ADD_SQL_FUNCTIONAL_TEST(deprecated/attach_detach_with_function/app_context_detached_get_block_num.sql)
+ ADD_SQL_FUNCTIONAL_TEST(deprecated/attach_detach_with_function/app_context_detached_get_block_num_negative.sql)
+ ADD_SQL_FUNCTIONAL_TEST(deprecated/attach_detach_with_function/app_context_detached_save_block_num.sql)
+ ADD_SQL_FUNCTIONAL_TEST(deprecated/attach_detach_with_function/app_context_detached_save_block_num_negative.sql)
+ ADD_SQL_FUNCTIONAL_TEST(deprecated/attach_detach_with_function/app_context_is_attached.sql)
+ ADD_SQL_FUNCTIONAL_TEST(deprecated/attach_detach_with_function/app_context_is_attached_negative.sql)
+ ADD_SQL_FUNCTIONAL_TEST(deprecated/attach_detach_with_function/app_context_remove_detached_test.sql)
+ ADD_SQL_FUNCTIONAL_TEST(deprecated/attach_detach_with_function/app_contexts_group_attach.sql)
+ ADD_SQL_FUNCTIONAL_TEST(deprecated/attach_detach_with_function/app_contexts_group_attach_negative.sql)
+ ADD_SQL_FUNCTIONAL_TEST(deprecated/attach_detach_with_function/app_contexts_group_detach_after_next_block.sql)
+ ADD_SQL_FUNCTIONAL_TEST(deprecated/attach_detach_with_function/app_contexts_group_detached_get_block_num.sql)
+ ADD_SQL_FUNCTIONAL_TEST(deprecated/attach_detach_with_function/app_contexts_group_detached_save_block_num.sql)
+ ADD_SQL_FUNCTIONAL_TEST(deprecated/attach_detach_with_function/app_contexts_group_is_attached.sql)
+ ADD_SQL_FUNCTIONAL_TEST(deprecated/attach_detach_with_function/app_contexts_group_is_attached_negative.sql)
+ ADD_SQL_FUNCTIONAL_TEST(deprecated/attach_detach_with_function/app_contexts_group_next_block_after_attach.sql)
+ ADD_SQL_FUNCTIONAL_TEST(deprecated/attach_detach_with_function/app_contexts_group_next_block_after_attach_2.sql)
+ ADD_SQL_FUNCTIONAL_TEST(deprecated/attach_detach_with_function/app_next_block_after_attach.sql)
+ ADD_SQL_FUNCTIONAL_TEST(deprecated/attach_detach_with_function/app_next_block_after_attach_2.sql)
+ ADD_SQL_FUNCTIONAL_TEST(deprecated/attach_detach_with_function/context_accounts_view_detach_test.sql)
+ ADD_SQL_FUNCTIONAL_TEST(deprecated/attach_detach_with_function/context_accounts_view_nonforking_detach_test.sql)
+ ADD_SQL_FUNCTIONAL_TEST(deprecated/attach_detach_with_function/context_applied_hardforks_view_detach_test.sql)
+ ADD_SQL_FUNCTIONAL_TEST(deprecated/attach_detach_with_function/context_applied_hardforks_view_nonforking_detach_test.sql)
+ ADD_SQL_FUNCTIONAL_TEST(deprecated/attach_detach_with_function/context_blocks_view_detach_test.sql)
+ ADD_SQL_FUNCTIONAL_TEST(deprecated/attach_detach_with_function/context_blocks_view_nonforking_detach_context_test.sql)
+ ADD_SQL_FUNCTIONAL_TEST(deprecated/attach_detach_with_function/context_operations_view_detach_test.sql)
+ ADD_SQL_FUNCTIONAL_TEST(deprecated/attach_detach_with_function/context_operations_view_non_forking_detach_test.sql)
+ ADD_SQL_FUNCTIONAL_TEST(deprecated/attach_detach_with_function/context_signatures_view_detach_test.sql)
+ ADD_SQL_FUNCTIONAL_TEST(deprecated/attach_detach_with_function/context_signatures_view_non_forking_detach_test.sql)
+ ADD_SQL_FUNCTIONAL_TEST(deprecated/attach_detach_with_function/context_transactions_view_detach_test.sql)
+ ADD_SQL_FUNCTIONAL_TEST(deprecated/attach_detach_with_function/context_transactions_view_non_forking_detach_test.sql)
+ ADD_SQL_FUNCTIONAL_TEST(deprecated/attach_detach_with_function/alice_access_to_bob_negative.sql )
+ ADD_SQL_FUNCTIONAL_TEST(deprecated/attach_detach_with_function/api_protection.sql )
 
 
