--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -130,6 +130,19 @@ prepare_postgrest_hafah_image:
     HAFAH_IMAGE_TAG: $CI_COMMIT_SHORT_SHA
     USE_POSTGREST: 1
 
+build_setup_docker_image:
+  stage: build
+  image: docker:24.0.6
+  services:
+    - docker:24.0.6-dind
+  tags:
+    - public-runner-docker
+  script:
+    - "echo \"TRUNCATE TABLE hafah_python.version; INSERT INTO hafah_python.version(git_hash) VALUES ('$CI_COMMIT_SHA');\" > set_version_in_sql.pgsql"
+    - "docker build --tag=$CI_REGISTRY_IMAGE/setup:$CI_COMMIT_SHORT_SHA -f Dockerfile.setup ."
+    - "docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY"
+    - "docker push $CI_REGISTRY_IMAGE/setup:$CI_COMMIT_SHORT_SHA"
+
 .pattern_tests:
   extends: .haf_app_pattern_tests_template
   stage: test
