--- a/docker/postgresql.conf
+++ b/docker/postgresql.conf
@@ -797,9 +797,8 @@ max_wal_size = 8GB
 wal_level = minimal
 max_wal_senders = 0
 
-# set to zero to avoid errors related to isufficient disk space on shared memory
-# DLN: set to 2 and see if indexes build faster
-max_parallel_maintenance_workers = 2
+# Set to 4 to build indexes faster
+max_parallel_maintenance_workers = 4
 
 # Allows to override above configuration settings
 
