--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,32 +14,30 @@ variables:
 
   # references registry.gitlab.syncad.com/hive/hive/ci-base-image:ubuntu22.04-6
   PYTEST_RUNTIME_IMAGE_NAME: "registry.gitlab.syncad.com/hive/hive/ci-base-image@sha256:8132802ca3b7ddba1bf78e4cc5ce1fbda6874cb029e35ae855c4cb3443e477b7"
-  POETRY_INSTALL_ROOT_DIR: "${CI_PROJECT_DIR}/haf/hive/tests/hive-local-tools"
+  POETRY_INSTALL_ROOT_DIR: "${CI_PROJECT_DIR}/haf/hive/tests/python/hive-local-tools"
 
   SETUP_SCRIPTS_PATH: "$CI_PROJECT_DIR/haf/scripts"
   REGISTRY: registry.gitlab.syncad.com/hive/hafah
   APP_PORT: 6543
   HAF_POSTGRES_URL: postgresql://haf_app_admin@haf-instance:5432/haf_block_log
-  BENCHMARK_SOURCE_DIR: "$CI_PROJECT_DIR/haf/hive/tests/hive-local-tools/tests_api/benchmarks"
+  BENCHMARK_SOURCE_DIR: "$CI_PROJECT_DIR/haf/hive/tests/python/hive-local-tools/tests_api/benchmarks"
 
   # Variables required by Common CI jobs
   TOX_IMAGE_TAG: "4b62d20dfebebacf51ca8795f3d7c4df2d9b8565"
   BUILDER_IMAGE_PATH: "registry.gitlab.syncad.com/hive/haf/ci-base-image${BUILDER_IMAGE_TAG}"
 
   # Variables specific to runner (there is single runner cache and there is 5m block_log available)
-  DATA_CACHE_HIVE_TEMPLATE: /cache/replay_data_hafah_hived
-  DATA_CACHE_HAF_TEMPLATE: /cache/replay_data_hafah_haf
-  DATA_CACHE_HIVE: "/cache/replay_data_hafah_hive_${CI_PIPELINE_ID}"
-  DATA_CACHE_HAF: "/cache/replay_data_hafah_haf_${CI_PIPELINE_ID}"
+  DATA_CACHE_HIVE_PREFIX: "/cache/replay_data_hive"
+  DATA_CACHE_HAF_PREFIX: "/cache/replay_data_haf"
   BLOCK_LOG_SOURCE_DIR_5M: /blockchain/block_log_5m
 
 include:
   - template: Workflows/Branch-Pipelines.gitlab-ci.yml
   - project: 'hive/haf'
-    ref: 365b6663b6ebc0cd00fe01f822a02ed16c294df5 # develop
+    ref: 0ae69352415622e26923195e8c354d4c74b9483c # develop
     file: '/scripts/ci-helpers/prepare_data_image_job.yml'
   - project: 'hive/common-ci-configuration'
-    ref: 4b62d20dfebebacf51ca8795f3d7c4df2d9b8565 # bw_reusing_pattern_tests_template_defs # It seems a variable cannot be used here
+    ref: 22bc5ffa3fbcb9c14195a4f4432089730ab5107d # bw_reusing_pattern_tests_template_defs # It seems a variable cannot be used here
     file: '/templates/test_jobs.gitlab-ci.yml'
 
 prepare_hived_image:
@@ -63,7 +61,6 @@ prepare_hived_data:
     SUBMODULE_DIR: "$CI_PROJECT_DIR/haf/hive"
     BLOCK_LOG_SOURCE_DIR: $BLOCK_LOG_SOURCE_DIR_5M
     CONFIG_INI_SOURCE: "$CI_PROJECT_DIR/haf/hive/docker/config_5M.ini"
-  resource_group: ${CI_COMMIT_SHA}
   tags:
     - data-cache-storage
 
@@ -88,7 +85,6 @@ prepare_haf_data:
     SUBMODULE_DIR: "$CI_PROJECT_DIR/haf"
     BLOCK_LOG_SOURCE_DIR: $BLOCK_LOG_SOURCE_DIR_5M
     CONFIG_INI_SOURCE: "$CI_PROJECT_DIR/haf/docker/config_5M.ini"
-  resource_group: ${CI_COMMIT_SHA}
   tags:
     - data-cache-storage
 
@@ -133,13 +129,11 @@ prepare_postgrest_hafah_image:
     HAF_APP_PORT: ${APP_PORT}
 
     PYTEST_BASED_IMAGE_NAME: ${PYTEST_RUNTIME_IMAGE_NAME}
-    POETRY_INSTALL_ROOT_DIR: "${CI_PROJECT_DIR}/haf/hive/tests/hive-local-tools"
-
-    PYTHONPATH: "$CI_PROJECT_DIR/haf/hive/tests/hive-local-tools/test-tools/package"
+    POETRY_INSTALL_ROOT_DIR: "${CI_PROJECT_DIR}/haf/hive/tests/python/hive-local-tools"
 
     TEST_SUITE: "condenser_api_patterns/get_transaction and not get_transaction_hex or account_history_api or condenser_api_patterns/get_account_history or condenser_api_patterns/get_ops_in_block"
-    PATTERN_TESTS_DIR: "${CI_PROJECT_DIR}/haf/hive/tests/api_tests/pattern_tests"
-    JUNIT_REPORT: "haf/hive/tests/api_tests/pattern_tests/results.xml"
+    PATTERN_TESTS_DIR: "${CI_PROJECT_DIR}/haf/hive/tests/python/api_tests/pattern_tests"
+    JUNIT_REPORT: "haf/hive/tests/python/api_tests/pattern_tests/results.xml"
     DIRECT_CALLS: 0
     HIVED_UID: $HIVED_UID
 
@@ -159,9 +153,8 @@ prepare_postgrest_hafah_image:
     - "**/ah.log"
     - "**/*.out.json"
     - "tests/tests_api/hived/workdir_*"
-    - "haf/hive/tests/api_tests/pattern_tests/results.xml"
+    - "haf/hive/tests/python/api_tests/pattern_tests/results.xml"
 
-  resource_group: ${CI_COMMIT_SHA}
   tags:
     - data-cache-storage
 
@@ -195,8 +188,8 @@ new_style_postgrest_pattern_tests:
   stage: test
   variables:
     PYTEST_BASED_IMAGE_NAME: ${PYTEST_RUNTIME_IMAGE_NAME}
-    POETRY_INSTALL_ROOT_DIR: "${CI_PROJECT_DIR}/haf/hive/tests/hive-local-tools"
-    COMPARISON_TESTS_DIR: "$CI_PROJECT_DIR/haf/hive/tests/api_tests/comparsion_tests"
+    POETRY_INSTALL_ROOT_DIR: "${CI_PROJECT_DIR}/haf/hive/tests/python/hive-local-tools"
+    COMPARISON_TESTS_DIR: "$CI_PROJECT_DIR/haf/hive/tests/python/api_tests/comparsion_tests"
     HAF_APP_PORT: ${APP_PORT}
     HIVED_UID: $HIVED_UID
 
@@ -214,9 +207,8 @@ new_style_postgrest_pattern_tests:
       - "**/*.out.json"
 
     reports:
-      junit: "haf/hive/tests/api_tests/comparsion_tests/comparsion_tests.xml"
+      junit: "haf/hive/tests/python/api_tests/comparsion_tests/comparsion_tests.xml"
 
-  resource_group: ${CI_COMMIT_SHA}
   tags:
     - data-cache-storage
 
@@ -237,7 +229,6 @@ postgrest_comparison_tests:
   variables:
     FF_NETWORK_PER_BUILD: 1
     API_FOR_TESTING: "account_history_api" # alternatively: blocks_api
-    PYTHONPATH: "$CI_PROJECT_DIR/haf/hive/tests/hive-local-tools/test-tools/package"
     APP_IMAGE: ""
     HIVED_UID: $HIVED_UID
   needs:
@@ -253,7 +244,6 @@ postgrest_comparison_tests:
       - wdir/
     reports:
       junit: wdir/jmeter_junit_report.xml
-  resource_group: ${CI_COMMIT_SHA}
   tags:
     - data-cache-storage
 
@@ -284,8 +274,7 @@ cleanup_hived_cache_manual:
   extends: .cleanup_cache_manual
   stage: cleanup
   variables:
-    CLEANUP_PATH_PATTERN: "/cache/replay_data_hafah_*"
-  resource_group: ${CI_COMMIT_SHA}
+    CLEANUP_PATH_PATTERN: "/cache/replay_data_haf_* /cache/replay_data_hive_*"
   tags:
     - data-cache-storage
 
@@ -323,7 +312,6 @@ prepare_haf_image_testnet:
 
 .hafah_pytest_fuctional_tests_base:
   stage: test
-  extends: .pattern_tests
   needs:
     - job: prepare_haf_image_testnet
       artifacts: true
@@ -335,6 +323,7 @@ prepare_haf_image_testnet:
     - name: $APP_IMAGE
       alias: app
   variables:
+    FF_NETWORK_PER_BUILD: 1
     BINARY_CACHE_PATH: "haf-testnet-binaries"
     HIVED_PATH: "$CI_PROJECT_DIR/$BINARY_CACHE_PATH/hived"
     COMPRESS_BLOCK_LOG_PATH: "$CI_PROJECT_DIR/$BINARY_CACHE_PATH/compress_block_log"
@@ -343,7 +332,12 @@ prepare_haf_image_testnet:
     DB_NAME: haf_block_log
     DB_URL: "postgresql://haf_admin@hfm-only-instance:5432/$DB_NAME"
     APP_IMAGE: $HAFAH_IMAGE_NAME
+    HAF_APP_PORT: ${APP_PORT}
+    DIRECT_CALLS: 0
     POSTGRES_URL: $DB_URL
+  before_script:
+    - echo "HAfAH image name $HAF_APP_IMAGE"
+    - echo "HAF image name $HAF_IMAGE_NAME"
   script:
       # - export PATH="/home/haf_admin/.local/bin:$PATH"
     - curl -sSL https://install.python-poetry.org | python3 -  # install poetry in isolated environment
@@ -368,7 +362,6 @@ prepare_haf_image_testnet:
     when: always
     expire_in: 1 week
   interruptible: true
-  resource_group:
   tags:
     - hived-for-tests
 
