--- a/tests/integration/haf-local-tools/pyproject.toml
+++ b/tests/integration/haf-local-tools/pyproject.toml
@@ -14,6 +14,7 @@ packages = [
 source = [
     { name = "PyPI", priority = "primary" },
     { name = "gitlab-wax", url = "https://gitlab.syncad.com/api/v4/projects/419/packages/pypi/simple", priority = "supplemental" },
+    { name = "gitlab-schemas", url = "https://gitlab.syncad.com/api/v4/projects/362/packages/pypi/simple", priority = "supplemental" },
 ]
 
 
