--- a/tests/integration/hafah-local-tools/pyproject.toml
+++ b/tests/integration/hafah-local-tools/pyproject.toml
@@ -10,6 +10,11 @@ description = "A collective library containing all the tools required by hafah p
 authors = []
 packages = [{ include = "hafah_local_tools" },
 ]
+source = [
+    { name = "PyPI", priority = "primary" },
+    { name = "gitlab-wax", url = "https://gitlab.syncad.com/api/v4/projects/419/packages/pypi/simple", priority = "supplemental" },
+    { name = "gitlab-schemas", url = "https://gitlab.syncad.com/api/v4/projects/362/packages/pypi/simple", priority = "supplemental" },
+]
 
 
 [tool.poetry.dependencies]
