--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,8 +9,8 @@ variables:
   GIT_STRATEGY: clone
   GIT_SUBMODULE_STRATEGY: "recursive"
   CI_DEBUG_SERVICES: "true"
-  # uses registry.gitlab.syncad.com/hive/haf/ci-base-image:ubuntu22.04-3
-  BUILDER_IMAGE_TAG: "@sha256:b639fee3a6f7761a8e38777045e65bc012fbd2ad01bf366e5e9211ac765f9629"
+  # uses registry.gitlab.syncad.com/hive/haf/ci-base-image:ubuntu22.04-5
+  BUILDER_IMAGE_TAG: "@sha256:2da00c8f151d9d582c21c99b24b988e58138a6bf682516a5a8bd740af0b24c89"
 
   # references registry.gitlab.syncad.com/hive/hive/ci-base-image:ubuntu22.04-6
   PYTEST_RUNTIME_IMAGE_NAME: "registry.gitlab.syncad.com/hive/hive/ci-base-image@sha256:8132802ca3b7ddba1bf78e4cc5ce1fbda6874cb029e35ae855c4cb3443e477b7"
@@ -24,7 +24,7 @@ variables:
 
   # Variables required by Common CI jobs
   TOX_IMAGE_TAG: "4b62d20dfebebacf51ca8795f3d7c4df2d9b8565"
-  BUILDER_IMAGE_PATH: "registry.gitlab.syncad.com/hive/haf/ci-base-image@sha256:b639fee3a6f7761a8e38777045e65bc012fbd2ad01bf366e5e9211ac765f9629"
+  BUILDER_IMAGE_PATH: "registry.gitlab.syncad.com/hive/haf/ci-base-image${BUILDER_IMAGE_TAG}"
 
   # Variables specific to runner (there is single runner cache and there is 5m block_log available)
   DATA_CACHE_HIVE_TEMPLATE: /cache/replay_data_hafah_hived
