--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@ variables:
 
   # references registry.gitlab.syncad.com/hive/hive/ci-base-image:ubuntu22.04-6
   PYTEST_RUNTIME_IMAGE_NAME: "registry.gitlab.syncad.com/hive/hive/ci-base-image@sha256:8132802ca3b7ddba1bf78e4cc5ce1fbda6874cb029e35ae855c4cb3443e477b7"
-  POETRY_INSTALL_ROOT_DIR: "${CI_PROJECT_DIR}/haf/hive/tests/python/hive-local-tools"
+  POETRY_INSTALL_DIR: "${CI_PROJECT_DIR}/haf/hive/tests/python/hive-local-tools"
 
   SETUP_SCRIPTS_PATH: "$CI_PROJECT_DIR/haf/scripts"
   REGISTRY: registry.gitlab.syncad.com/hive/hafah
@@ -23,7 +23,7 @@ variables:
   BENCHMARK_SOURCE_DIR: "$CI_PROJECT_DIR/haf/hive/tests/python/hive-local-tools/tests_api/benchmarks"
 
   # Variables required by Common CI jobs
-  TOX_IMAGE_TAG: "4b62d20dfebebacf51ca8795f3d7c4df2d9b8565"
+  TOX_IMAGE_TAG: "5c42c8019dd329000fd036668b22eb3eb99a743a"
   BUILDER_IMAGE_PATH: "registry.gitlab.syncad.com/hive/haf/ci-base-image${BUILDER_IMAGE_TAG}"
 
   # Variables specific to runner (there is single runner cache and there is 5m block_log available)
@@ -34,10 +34,10 @@ variables:
 include:
   - template: Workflows/Branch-Pipelines.gitlab-ci.yml
   - project: 'hive/haf'
-    ref: 0ae69352415622e26923195e8c354d4c74b9483c # develop
+    ref: 8a5bdf1a273e2fcf20353c73c50fea84970b8885 # develop
     file: '/scripts/ci-helpers/prepare_data_image_job.yml'
   - project: 'hive/common-ci-configuration'
-    ref: 22bc5ffa3fbcb9c14195a4f4432089730ab5107d # bw_reusing_pattern_tests_template_defs # It seems a variable cannot be used here
+    ref: 5c42c8019dd329000fd036668b22eb3eb99a743a # bw_reusing_pattern_tests_template_defs # It seems a variable cannot be used here
     file: '/templates/test_jobs.gitlab-ci.yml'
 
 prepare_hived_image:
@@ -109,7 +109,6 @@ prepare_haf_data:
   artifacts:
     reports:
       dotenv: docker_image_name.env
-    expire_in: 6 hours
 
   tags:
     - public-runner-docker
@@ -129,7 +128,7 @@ prepare_postgrest_hafah_image:
     HAF_APP_PORT: ${APP_PORT}
 
     PYTEST_BASED_IMAGE_NAME: ${PYTEST_RUNTIME_IMAGE_NAME}
-    POETRY_INSTALL_ROOT_DIR: "${CI_PROJECT_DIR}/haf/hive/tests/python/hive-local-tools"
+    POETRY_INSTALL_ROOT_DIR : ${POETRY_INSTALL_DIR}
 
     TEST_SUITE: "condenser_api_patterns/get_transaction and not get_transaction_hex or account_history_api or condenser_api_patterns/get_account_history or condenser_api_patterns/get_ops_in_block"
     PATTERN_TESTS_DIR: "${CI_PROJECT_DIR}/haf/hive/tests/python/api_tests/pattern_tests"
@@ -188,7 +187,7 @@ new_style_postgrest_pattern_tests:
   stage: test
   variables:
     PYTEST_BASED_IMAGE_NAME: ${PYTEST_RUNTIME_IMAGE_NAME}
-    POETRY_INSTALL_ROOT_DIR: "${CI_PROJECT_DIR}/haf/hive/tests/python/hive-local-tools"
+    POETRY_INSTALL_ROOT_DIR : ${POETRY_INSTALL_DIR}
     COMPARISON_TESTS_DIR: "$CI_PROJECT_DIR/haf/hive/tests/python/api_tests/comparsion_tests"
     HAF_APP_PORT: ${APP_PORT}
     HIVED_UID: $HIVED_UID
@@ -274,6 +273,7 @@ cleanup_hived_cache_manual:
   extends: .cleanup_cache_manual
   stage: cleanup
   variables:
+    GIT_STRATEGY: none
     CLEANUP_PATH_PATTERN: "/cache/replay_data_haf_* /cache/replay_data_hive_*"
   tags:
     - data-cache-storage
