--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,7 +37,7 @@ include:
     ref: 9aa55020b9cddaed0f320d2da4ea22a6ef494069 # develop
     file: '/scripts/ci-helpers/prepare_data_image_job.yml'
   - project: 'hive/common-ci-configuration'
-    ref: 5c42c8019dd329000fd036668b22eb3eb99a743a # bw_reusing_pattern_tests_template_defs # It seems a variable cannot be used here
+    ref: 7c58303ffb61d91ef9662ec20e7b498bc6f62b8f # develop # It seems a variable cannot be used here
     file: '/templates/test_jobs.gitlab-ci.yml'
 
 prepare_hived_image:
