--- a/tests/integration/hafah-local-tools/pyproject.toml
+++ b/tests/integration/hafah-local-tools/pyproject.toml
@@ -12,8 +12,9 @@ packages = [{ include = "hafah_local_tools" },
 ]
 source = [
     { name = "PyPI", priority = "primary" },
-    { name = "gitlab-wax", url = "https://gitlab.syncad.com/api/v4/projects/419/packages/pypi/simple", priority = "supplemental" },
     { name = "gitlab-schemas", url = "https://gitlab.syncad.com/api/v4/projects/362/packages/pypi/simple", priority = "supplemental" },
+    { name = "gitlab-wax", url = "https://gitlab.syncad.com/api/v4/projects/419/packages/pypi/simple", priority = "supplemental" },
+    { name = "gitlab-helpy", url = "https://gitlab.syncad.com/api/v4/projects/434/packages/pypi/simple", priority = "supplemental" },
 ]
 
 
