--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,7 @@ variables:
   SETUP_SCRIPTS_PATH: "$CI_PROJECT_DIR/haf/scripts"
   REGISTRY: registry.gitlab.syncad.com/hive/hafah
   APP_PORT: 6543
-  HAF_POSTGRES_URL: postgresql://haf_app_admin@haf-instance:5432/haf_block_log
+  HAF_POSTGRES_URL: postgresql://haf_admin@haf-instance:5432/haf_block_log
   BENCHMARK_SOURCE_DIR: "$CI_PROJECT_DIR/haf/hive/tests/python/hive-local-tools/tests_api/benchmarks"
 
   # Variables required by Common CI jobs
