--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,8 +22,15 @@ variables:
   SETUP_SCRIPTS_PATH: "$CI_PROJECT_DIR/haf/scripts"
   REGISTRY: registry.gitlab.syncad.com/hive/hafah
   APP_PORT: 6543
-  HAF_POSTGRES_URL: postgresql://haf_admin@haf-instance:5432/haf_block_log
   BENCHMARK_SOURCE_DIR: "$CI_PROJECT_DIR/haf/hive/tests/python/hive-local-tools/tests_api/benchmarks"
+
+  # Allow access from any network to eliminate CI IP addressing problems
+  HAF_DB_ACCESS: |
+              "host    all              haf_admin        0.0.0.0/0    trust"
+              "host    all              hived            0.0.0.0/0    trust"
+              "host    all              hafah_user       0.0.0.0/0    trust"
+              "host    all              all              0.0.0.0/0    scram-sha-256"
+
 
   # Variables required by Common CI jobs
   TOX_IMAGE_TAG: "18b2a600936c6f7945d6f1131f606c7083a515ff"
@@ -40,7 +47,7 @@ include:
     ref: ad649ebee0cf62049f682e0e7e1fb70b70426aaf # develop
     file: '/scripts/ci-helpers/prepare_data_image_job.yml'
   - project: 'hive/common-ci-configuration'
-    ref: 18b2a600936c6f7945d6f1131f606c7083a515ff # develop # It seems a variable cannot be used here
+    ref: e74cc41869c0782145506ea59ca1de9a51dcd3ec # develop # It seems a variable cannot be used here
     file:
       - '/templates/test_jobs.gitlab-ci.yml'
       - '/templates/python_projects.gitlab-ci.yml'
@@ -152,6 +159,7 @@ build_setup_docker_image:
   variables:
     HAF_APP_IMAGE: ""
     HAF_APP_PORT: ${APP_PORT}
+    HAF_APP_USER: "hafah_user"
 
     PYTEST_BASED_IMAGE_NAME: ${PYTEST_RUNTIME_IMAGE_NAME}
     POETRY_INSTALL_ROOT_DIR : ${POETRY_INSTALL_DIR}
@@ -216,6 +224,8 @@ new_style_postgrest_pattern_tests:
     POETRY_INSTALL_ROOT_DIR : ${POETRY_INSTALL_DIR}
     COMPARISON_TESTS_DIR: "$CI_PROJECT_DIR/haf/hive/tests/python/api_tests/comparsion_tests"
     HAF_APP_PORT: ${APP_PORT}
+    HAF_APP_USER: "hafah_user"
+
     HIVED_UID: $HIVED_UID
 
   needs:
