--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -346,19 +346,43 @@ prepare_haf_image_testnet:
   command: ["--execute-maintenance-script=${HAF_SOURCE_DIR}/scripts/maintenance-scripts/sleep_infinity.sh"]
 
 .hafah_pytest_fuctional_tests_base:
+  extends: .pytest_based_template
   stage: test
   needs:
     - job: prepare_haf_image_testnet
       artifacts: true
     - job: prepare_postgrest_hafah_image
       artifacts: true
-  image: $BUILDER_IMAGE_PATH
+
   services:
     - *hfm-only-service
-    - name: $APP_IMAGE
+    - name: ${HAF_APP_IMAGE}
+      alias: app-setup
+      variables:
+        # intentionally use setup way chosed in haf_api_node compose scripts
+        POSTGRES_URL: "postgresql://haf_admin@hfm-only-instance/haf_block_log"
+      command: ["install_app"]
+
+    - name: ${HAF_APP_IMAGE}
       alias: app
+      command: ["--postgres-url=postgresql://hafah_user@hfm-only-instance/haf_block_log"]
+      entrypoint:
+        - '/bin/bash'
+        - '-c'
+        - |
+          set -xeuo pipefail
+          # since Gitlab services startup order is undefined, we need to wait for app setup completion
+          "/home/hafah_user/app/scripts/wait_for_setup_completed.sh" "$@"
+          echo "Application setup finished - continue app-service spawn..."
+          # pass control to the default image entrypoint
+          /home/hafah_user/docker_entrypoint.sh "$@"
+        # arg $0 should be explicitly passed when using 'bash -c' entrypoints
+        - '/bin/bash'
   variables:
-    FF_NETWORK_PER_BUILD: 1
+    JUNIT_REPORT: tests/integration/functional/report.xml
+    PYTEST_BASED_IMAGE_NAME: $BUILDER_IMAGE_PATH
+    POETRY_INSTALL_ROOT_DIR: $CI_PROJECT_DIR/tests/integration/hafah-local-tools
+
     BINARY_CACHE_PATH: "haf-testnet-binaries"
     HIVED_PATH: "$CI_PROJECT_DIR/$BINARY_CACHE_PATH/hived"
     COMPRESS_BLOCK_LOG_PATH: "$CI_PROJECT_DIR/$BINARY_CACHE_PATH/compress_block_log"
@@ -366,39 +390,18 @@ prepare_haf_image_testnet:
     CLI_WALLET_PATH: "$CI_PROJECT_DIR/$BINARY_CACHE_PATH/cli_wallet"
     DB_NAME: haf_block_log
     DB_URL: "postgresql://haf_admin@hfm-only-instance:5432/$DB_NAME"
-    APP_IMAGE: $HAFAH_IMAGE_NAME
+    HAF_APP_IMAGE: $HAFAH_IMAGE_NAME
     HAF_APP_PORT: ${APP_PORT}
     DIRECT_CALLS: 0
     POSTGRES_URL: $DB_URL
-  before_script:
+  script:
     - echo "HAfAH image name $HAF_APP_IMAGE"
     - echo "HAF image name $HAF_IMAGE_NAME"
-  script:
-      # - export PATH="/home/haf_admin/.local/bin:$PATH"
-    - curl -sSL https://install.python-poetry.org | python3 -  # install poetry in isolated environment
-    - python3 -m venv venv/
-    - . venv/bin/activate
-    - (cd $CI_PROJECT_DIR/tests/integration/hafah-local-tools && poetry install)
-
-    # setup postgres and DB for work with hafah
-    - $CI_PROJECT_DIR/scripts/setup_postgres.sh --postgres-url="$DB_URL"
-    - bash ${CI_PROJECT_DIR}/scripts/generate_version_sql.bash ${CI_PROJECT_DIR}
-    - $CI_PROJECT_DIR/scripts/install_app.sh --postgres-url="$DB_URL"
-
     # run tests
     - cd $CI_PROJECT_DIR/tests/integration/functional
     - pytest --junitxml report.xml --postgrest-hafah-adress=app:$APP_PORT --postgres-db-url=$DB_URL -m $PYTEST_MARK
-  artifacts:
-    paths:
-    - "**/generated_during_*"
-    - "**/generated_by_package_fixtures"
-    reports:
-      junit: tests/integration/system/haf/report.xml
-    when: always
-    expire_in: 1 week
-  interruptible: true
   tags:
-    - hived-for-tests
+    - public-runner-docker
 
 hafah_pytest_fuctional_tests_part1:
   extends: .hafah_pytest_fuctional_tests_base
