hafah_user role added to trusted connection set while performing pytest based tests.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -342,6 +342,7 @@ prepare_haf_image_testnet:
                 "host    all              haf_admin        0.0.0.0/0    trust"
                 "host    all              haf_app_admin    0.0.0.0/0    trust"
                 "host    all              hived            0.0.0.0/0    trust"
+                "host    all              hafah_user       0.0.0.0/0    trust"
                 "host    all              all              0.0.0.0/0    scram-sha-256"
   command: ["--execute-maintenance-script=${HAF_SOURCE_DIR}/scripts/maintenance-scripts/sleep_infinity.sh"]
 
