--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,13 +44,14 @@ variables:
 include:
   - template: Workflows/Branch-Pipelines.gitlab-ci.yml
   - project: 'hive/haf'
-    ref: 7bb7aab44a7083994c36f040e84d501c11afc159 # develop
+    ref: e9d964849997e0cb18903f0910c4bdb293997195 # develop
     file: '/scripts/ci-helpers/prepare_data_image_job.yml'
   - project: 'hive/common-ci-configuration'
-    ref: b2ff9f5a48bc8fb379c66ec4e7907ea1e796ff1b # develop # It seems a variable cannot be used here
+    ref: 91d072682e22869aea3acd7affa20db0f6a7a2c8 # develop # It seems a variable cannot be used here
     file:
       - '/templates/test_jobs.gitlab-ci.yml'
       - '/templates/python_projects.gitlab-ci.yml'
+      - '/templates/cache_cleanup.gitlab-ci.yml'
 
 verify_poetry_lock_sanity:
   extends: .verify_poetry_lock_sanity_template
@@ -296,12 +297,19 @@ postgrest_block_api_benchmark_tests:
 postgrest_account_history_benchmark_tests:
   extends: .benchmark_tests
 
-cleanup_hived_cache_manual:
-  extends: .cleanup_cache_manual
+cleanup_hive_cache_manual:
+  extends: .cleanup_cache_manual_template
   stage: cleanup
   variables:
-    GIT_STRATEGY: none
-    CLEANUP_PATH_PATTERN: "/cache/replay_data_haf_* /cache/replay_data_hive_*"
+    CLEANUP_PATH_PATTERN: "/cache/replay_data_hive_*"
+  tags:
+    - data-cache-storage
+
+cleanup_haf_cache_manual:
+  extends: .cleanup_cache_manual_template
+  stage: cleanup
+  variables:
+    CLEANUP_PATH_PATTERN: "/cache/replay_data_haf_*"
   tags:
     - data-cache-storage
 
